# sfguide-snowpipe-streaming-interactive-demo

./: .env.example  .gitignore  ASSUMPTIONS.md  Dockerfile  LEAVE_BEHIND.md  README.md  RUN_DEMO.md  TALK_TRACK.md  TESTING.md  TROUBLESHOOTING.md  app.py  credit_service.yaml  deploy.sh  environment.yml  ingest.py  layout.json  observability.py  pyproject.toml  queries.py  semantic_view.sql  setup.sh  setup.sql  stages.json  teardown.sh
.streamlit/: config.toml
vm-ingest/: .env.example  Dockerfile  README.md  deploy.sh  docker-compose.override.yml  docker-compose.yml  ingest_worker.py  observe-agent.yaml.tpl  pyproject.toml  streaming_service.py  sync-quick-tunnel.sh  vm-bootstrap.sh
vm-ingest/terraform/: .terraform.lock.hcl  README.md  cloudflare.tf  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
